--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "private": true,
   "dependencies": {
     "antd": "^3.5.3",
+    "classnames": "^2.2.6",
+    "history": "^4.7.2",
+    "less": "2.7.2",
+    "rc-drawer": "^1.2.0",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-router": "^4.2.0",
