--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "适航管理辅助系统",
+  "name": "适航管理辅助系统 - 鸢尾工作室",
   "icons": [
     {
       "src": "favicon.ico",
